<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.easymorse</groupId>
	<artifactId>rpc</artifactId>
	<packaging>war</packaging>
	<version>1.0</version>
	<name>rpc</name>

	<properties>
		<gwt.version>2.0.0</gwt.version>
		<spring.version>3.0.0.RELEASE</spring.version>
		<spring-security.version>3.0.1.RELEASE</spring-security.version>
	</properties>

	<dependencies>
		<!--		<dependency>-->
		<!--			<groupId>org.apache.commons</groupId>-->
		<!--			<artifactId>commons-io</artifactId>-->
		<!--			<version>1.3.2</version>-->
		<!--		</dependency>-->
		<!--		<dependency>-->
		<!--			<groupId>javassist</groupId>-->
		<!--			<artifactId>javassist</artifactId>-->
		<!--			<version>3.8.0.GA</version>-->
		<!--		</dependency>-->
		<!--		<dependency>-->
		<!--			<groupId>cglib</groupId>-->
		<!--			<artifactId>cglib-nodep</artifactId>-->
		<!--			<version>2.2</version>-->
		<!--		</dependency>-->
		<dependency>
			<groupId>org.apache.derby</groupId>
			<artifactId>derby</artifactId>
			<version>10.5.3.0_1</version>
		</dependency>
		<!--		<dependency>-->
		<!--			<groupId>org.hibernate</groupId>-->
		<!--			<artifactId>hibernate-core</artifactId>-->
		<!--			<version>3.3.2.GA</version>-->
		<!--		</dependency>-->
		<!--		<dependency>-->
		<!--			<groupId>org.hibernate</groupId>-->
		<!--			<artifactId>hibernate-annotations</artifactId>-->
		<!--			<version>3.4.0.GA</version>-->
		<!--		</dependency>-->
		<!--		<dependency>-->
<!--			<groupId>com.bramosystems.oss.player</groupId>-->
		<!--			<artifactId>bst-player-api</artifactId>-->
		<!--			<version>1.1-SNAPSHOT</version>-->
		<!--			<scope>provided</scope>-->
		<!--		</dependency>-->
		<!--		<dependency>-->
		<!--			<groupId>commons-fileupload</groupId>-->
		<!--			<artifactId>commons-fileupload</artifactId>-->
		<!--			<version>1.2.1</version>-->
		<!--		</dependency>-->
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-servlet</artifactId>
			<version>${gwt.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
			<version>${gwt.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.7</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.5</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet.jsp</groupId>
			<artifactId>jsp-api</artifactId>
			<version>2.1</version>
			<scope>provided</scope>
		</dependency>
<!--		<dependency>-->
		<!--			<groupId>org.springframework</groupId>-->
		<!--			<artifactId>spring-core</artifactId>-->
		<!--			<version>${spring.version}</version>-->
		<!--		</dependency>-->
		<!--		<dependency>-->
		<!--			<groupId>org.springframework</groupId>-->
		<!--			<artifactId>spring-webmvc</artifactId>-->
		<!--			<version>${spring.version}</version>-->
		<!--		</dependency>-->
		<!--		<dependency>-->
		<!--			<groupId>org.springframework</groupId>-->
		<!--			<artifactId>spring-orm</artifactId>-->
		<!--			<version>${spring.version}</version>-->
		<!--		</dependency>-->
		<!--		<dependency>-->
		<!--			<groupId>org.springframework.security</groupId>-->
		<!--			<artifactId>spring-security-web</artifactId>-->
		<!--			<version>${spring-security.version}</version>-->
		<!--		</dependency>-->
		<!--		<dependency>-->
		<!--			<groupId>org.springframework.security</groupId>-->
		<!--			<artifactId>spring-security-config</artifactId>-->
		<!--			<version>${spring-security.version}</version>-->
		<!--		</dependency>-->
<!--		<dependency>-->
		<!--			<groupId>org.codehaus.jackson</groupId>-->
		<!--			<artifactId>jackson-mapper-asl</artifactId>-->
		<!--			<version>1.4.1</version>-->
		<!--		</dependency>-->
		<!--		<dependency>-->
		<!--			<groupId>org.hibernate</groupId>-->
		<!--			<artifactId>hibernate-validator</artifactId>-->
		<!--			<version>4.0.0.GA</version>-->
		<!--		</dependency>-->
				<dependency>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-log4j12</artifactId>
					<version>1.5.6</version>
				</dependency>
				<dependency>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
					<version>1.5.6</version>
				</dependency>
<!--				<dependency>-->
		<!--			<groupId>net.sf.gilead</groupId>-->
		<!--			<artifactId>adapter4gwt</artifactId>-->
		<!--			<version>1.2.3</version>-->
		<!--		</dependency>-->

		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>3.5.1-Final</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-annotations</artifactId>
			<version>3.5.1-Final</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-entitymanager</artifactId>
			<version>3.5.1-Final</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>3.5.1-Final</version>
		</dependency>
<!--		<dependency>-->
<!--			<groupId>org.hibernate</groupId>-->
<!--			<artifactId>ejb3-persistence</artifactId>-->
<!--			<version>1.0.2.GA</version>-->
<!--		</dependency>-->
	</dependencies>
	<build>
		<outputDirectory>war/WEB-INF/classes</outputDirectory>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<configuration>
					<runTarget>RpcService.html</runTarget>
					<extraJvmArgs>-Xmx512m -XX:PermSize=128M</extraJvmArgs>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>compile</goal>
							<goal>generateAsync</goal>
							<goal>test</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<compilerVersion>1.6</compilerVersion>
					<source>1.6</source>
					<target>1.6</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.1-beta-1</version>
				<configuration>
					<warSourceDirectory>war</warSourceDirectory>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-deploy-plugin</artifactId>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<configuration>
					<wtpmanifest>true</wtpmanifest>
					<wtpapplicationxml>true</wtpapplicationxml>
					<wtpversion>2.0</wtpversion>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>tomcat-maven-plugin</artifactId>
				<configuration>
					<url>http://10.167.33.223:8080/manager</url>
					<server>videoserver</server>
					<!--					<url>http://localhost:8080/manager</url>-->
					<!--					<server>myserver</server>-->
					<path>/videos</path>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>maven-jetty-plugin</artifactId>
				<version>6.1.6</version>
				<configuration>
					<webAppSourceDirectory>${basedir}/war</webAppSourceDirectory>
				</configuration>
			</plugin>
		</plugins>
	</build>
		<repositories>
	<!--		<repository>-->
	<!--
		<id>SpringSource Enterprise Bundle Repository - External Bundle
		Milestones</id>
	-->
	<!--
		<url>http://repository.springsource.com/maven/bundles/milestone</url>
	-->
	<!--		</repository>-->
	<!--		<repository>-->
	<!--
		<id>SpringSource Enterprise Bundle Repository - SpringSource Bundle
		Releases</id>
	-->
	<!--
		<url>http://repository.springsource.com/maven/bundles/release</url>
	-->
	<!--		</repository>-->
	<!--		<repository>-->
	<!--
		<id>SpringSource Enterprise Bundle Repository - External Bundle
		Releases</id>
	-->
	<!--
		<url>http://repository.springsource.com/maven/bundles/external</url>
	-->
	<!--		</repository>-->
			<repository>
				<id>repository.jboss.org</id>
				<name>JBoss Repository</name>
				<url>http://repository.jboss.org/maven2</url>
			</repository>
	<!--		<repository>-->
	<!--			<id>bramosystems-releases</id>-->
	<!--			<name>Bramosystems Release Repository</name>-->
	<!--			<url>http://downloads.bramosystems.com/maven2/releases</url>-->
	<!--		</repository>-->
	<!--		<repository>-->
	<!--			<id>bramosystems-snapshot</id>-->
	<!--			<name>Bramosystems Snapshots Repository</name>-->
<!--			<url>http://downloads.bramosystems.com/maven2/snapshots</url>-->
	<!--		</repository>-->
	<!--		<repository>-->
	<!--			<id>gilead-release</id>-->
	<!--			<name>Gilead Repository</name>-->
	<!--
		<url>https://gilead.svn.sourceforge.net/svnroot/gilead/gilead/maven-repo</url>
	-->
	<!--		</repository>-->
	<!--		 <repository>-->
	<!--			<id>gilead-snapshot</id>-->
	<!--			<name>Gilead snapshot</name>-->
	<!--
		<url>https://gilead.svn.sourceforge.net/svnroot/gilead/gilead/maven-snapshots-repo</url>
	-->
	<!--		</repository> -->
		</repositories>
</project>
